# a2a-client

./: Makefile  README.md
backend/: .env.example  debug_coordinator.py  pyproject.toml  test_adk_agent.py  test_coordinator.py  test_llm_reasoning.py
backend/src/agent/: __init__.py  adk_agent.py  adk_agent_workflow.py  prompts.py  routing_agent.py  run_agent.py  server.py
frontend/: package-lock.json  vite.config.ts
frontend/public/: test_api.html
frontend/src/: App.tsx  global.css
frontend/src/components/: ActivityTimeline.tsx  ChatMessagesView.tsx  InputForm.tsx  WelcomeScreen.tsx
